# Wayframe

./: .bazelrc  .gitignore  .golangci.yml  BUILD.bazel  CI_BAZEL_LINTING_UPDATE.md  CI_DOCUMENTATION_INDEX.md  CI_IMPLEMENTATION_CHECKLIST.md  CI_INTEGRATION.md  MODULE.bazel  README.md  WORKSPACE  go.mod  go.sum  lint.sh  verify-ci-setup.sh
.github/: BRANCH_DETECTION.md  copilot-instructions.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  USAGE.md
examples/basic/: BUILD.bazel  config.example.json  main.go
examples/fiber/: BUILD.bazel  main.go
examples/gorilla/: BUILD.bazel  main.go
examples/stdlib/: BUILD.bazel  main.go
internal/config/: BUILD.bazel  config.go  config_test.go
internal/env/: BUILD.bazel  env.go  env_test.go
internal/web/: BUILD.bazel  interface.go
internal/web/fiber/: BUILD.bazel  server.go
internal/web/gorilla/: BUILD.bazel  server.go
internal/web/stdlib/: BUILD.bazel  server.go
pkg/config/: BUILD.bazel  config.go  config_test.go  doc.go
pkg/logger/: BUILD.bazel  doc.go  logger.go  logger_test.go
pkg/server/: BUILD.bazel  doc.go  server.go  server_test.go
tools/: BUILD.bazel  coverage_generator.sh
