load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "basic",
    embed = [":basic_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "basic_lib",
    srcs = ["main.go"],
    importpath = "github.com/Waryway/Wayframe/examples/basic",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config",
        "//pkg/logger",
        "//pkg/server",
    ],
)
