load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "fiber_lib",
    srcs = ["main.go"],
    importpath = "github.com/Waryway/Wayframe/examples/fiber",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/env",
        "//internal/web",
        "//internal/web/fiber",
        "@com_github_gofiber_fiber_v2//:fiber",
    ],
)

go_binary(
    name = "fiber",
    embed = [":fiber_lib"],
    visibility = ["//visibility:public"],
)
