load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "stdlib_lib",
    srcs = ["main.go"],
    importpath = "github.com/Waryway/Wayframe/examples/stdlib",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/env",
        "//internal/web",
        "//internal/web/stdlib",
    ],
)

go_binary(
    name = "stdlib",
    embed = [":stdlib_lib"],
    visibility = ["//visibility:public"],
)
