load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "env",
    srcs = ["env.go"],
    importpath = "github.com/Waryway/Wayframe/internal/env",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/config",
        "//pkg/logger",
    ],
)

go_test(
    name = "env_test",
    srcs = ["env_test.go"],
    embed = [":env"],
)
