load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "fiber",
    srcs = ["server.go"],
    importpath = "github.com/Waryway/Wayframe/internal/web/fiber",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/web",
        "@com_github_gofiber_fiber_v2//:fiber",
    ],
)
